{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 16,
  "lineage": "55725612-ae55-34fd-d7e6-d4a398242aff",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "hydro-vpc-network-fea95f6a-default-allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-07-24T10:15:28.064-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hydroflow-work/global/firewalls/hydro-vpc-network-fea95f6a-default-allow-internal",
            "log_config": [],
            "name": "hydro-vpc-network-fea95f6a-default-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/global/networks/hydro-vpc-network-fea95f6a",
            "priority": 1000,
            "project": "hydroflow-work",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/global/firewalls/hydro-vpc-network-fea95f6a-default-allow-internal",
            "source_ranges": [
              "10.128.0.0/9"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.hydro-vpc-network-fea95f6a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "hydro-vpc-network-fea95f6a-default-allow-ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-07-24T10:15:28.096-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hydroflow-work/global/firewalls/hydro-vpc-network-fea95f6a-default-allow-ping",
            "log_config": [],
            "name": "hydro-vpc-network-fea95f6a-default-allow-ping",
            "network": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/global/networks/hydro-vpc-network-fea95f6a",
            "priority": 1000,
            "project": "hydroflow-work",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/global/firewalls/hydro-vpc-network-fea95f6a-default-allow-ping",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.hydro-vpc-network-fea95f6a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "open-external-port-22",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-07-24T10:15:28.184-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hydroflow-work/global/firewalls/open-external-port-22-04d5774f",
            "log_config": [],
            "name": "open-external-port-22-04d5774f",
            "network": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/global/networks/hydro-vpc-network-fea95f6a",
            "priority": 1000,
            "project": "hydroflow-work",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/global/firewalls/open-external-port-22-04d5774f",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "open-external-port-tag-22-04d5774f"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.hydro-vpc-network-fea95f6a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-instance-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20240709",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/zones/us-central1-a/disks/hydro-vm-instance-1b59f98d"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/hydroflow-work/zones/us-central1-a/instances/hydro-vm-instance-1b59f98d",
            "instance_id": "5066524986601932894",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "hydro:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDDowTwcNqXxAPwYH840IZ4Pkk3H2YcvqszE+OkjPf+YUnKk7qB1iUvmlZsZ+uoH9+Xw3rVcvXWLigXdj9hqqJfepPeq60Ucm+LaYm4qOpikkSm/DHjkNu/YFrARfMxTqiizQnm5jEMdieoOW99qrNRdUm08hz3fuM7ZVdPygvA8kk6yX1iPBLqPG4IobZYKFBY/rciULovM9PZQKxmsBGg0LH7CcFZRuJlpwEmjmPnsmVMf0uuPrAvskYtxYPdE/ordi86R3o+bGcG4s1MeAFXUKn4p5RTHOTzPyAMIg7Ixv/natvNZCJFPFrcl/7eiXX1GLY1uCiOnFX9wDCUQ9Ju877XFRFNq1rleqd+Ka8BRvok71p0hlTUt9+51cgvCKrwkn06/ULhKHOxhc+vamsTJ3G5FoeUOMshDmO6R/LdflR [...]
            },
            "metadata_fingerprint": "73sVacabPxk=",
            "name": "hydro-vm-instance-1b59f98d",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.208.28.138",
                    "network_tier": "STANDARD"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/global/networks/hydro-vpc-network-fea95f6a",
                "network_ip": "10.128.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/regions/us-central1/subnetworks/hydro-vpc-network-fea95f6a",
                "subnetwork_project": "hydroflow-work"
              }
            ],
            "project": "hydroflow-work",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/zones/us-central1-a/instances/hydro-vm-instance-1b59f98d",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "open-external-port-tag-22-04d5774f"
            ],
            "tags_fingerprint": "b98oSeQpJ8Q=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.hydro-vpc-network-fea95f6a",
            "tls_private_key.vm_instance_ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20240709",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/zones/us-central1-a/disks/hydro-vm-instance-f0aec96f"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/hydroflow-work/zones/us-central1-a/instances/hydro-vm-instance-f0aec96f",
            "instance_id": "2455175327216601182",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "hydro:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDDowTwcNqXxAPwYH840IZ4Pkk3H2YcvqszE+OkjPf+YUnKk7qB1iUvmlZsZ+uoH9+Xw3rVcvXWLigXdj9hqqJfepPeq60Ucm+LaYm4qOpikkSm/DHjkNu/YFrARfMxTqiizQnm5jEMdieoOW99qrNRdUm08hz3fuM7ZVdPygvA8kk6yX1iPBLqPG4IobZYKFBY/rciULovM9PZQKxmsBGg0LH7CcFZRuJlpwEmjmPnsmVMf0uuPrAvskYtxYPdE/ordi86R3o+bGcG4s1MeAFXUKn4p5RTHOTzPyAMIg7Ixv/natvNZCJFPFrcl/7eiXX1GLY1uCiOnFX9wDCUQ9Ju877XFRFNq1rleqd+Ka8BRvok71p0hlTUt9+51cgvCKrwkn06/ULhKHOxhc+vamsTJ3G5FoeUOMshDmO6R/LdflR [...]
            },
            "metadata_fingerprint": "73sVacabPxk=",
            "name": "hydro-vm-instance-f0aec96f",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.209.230.186",
                    "network_tier": "STANDARD"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/global/networks/hydro-vpc-network-fea95f6a",
                "network_ip": "10.128.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/regions/us-central1/subnetworks/hydro-vpc-network-fea95f6a",
                "subnetwork_project": "hydroflow-work"
              }
            ],
            "project": "hydroflow-work",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/zones/us-central1-a/instances/hydro-vm-instance-f0aec96f",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "open-external-port-tag-22-04d5774f"
            ],
            "tags_fingerprint": "b98oSeQpJ8Q=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.hydro-vpc-network-fea95f6a",
            "tls_private_key.vm_instance_ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20240709",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/zones/us-central1-a/disks/hydro-vm-instance-a92a425b"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/hydroflow-work/zones/us-central1-a/instances/hydro-vm-instance-a92a425b",
            "instance_id": "3418433588587956318",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "hydro:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDDowTwcNqXxAPwYH840IZ4Pkk3H2YcvqszE+OkjPf+YUnKk7qB1iUvmlZsZ+uoH9+Xw3rVcvXWLigXdj9hqqJfepPeq60Ucm+LaYm4qOpikkSm/DHjkNu/YFrARfMxTqiizQnm5jEMdieoOW99qrNRdUm08hz3fuM7ZVdPygvA8kk6yX1iPBLqPG4IobZYKFBY/rciULovM9PZQKxmsBGg0LH7CcFZRuJlpwEmjmPnsmVMf0uuPrAvskYtxYPdE/ordi86R3o+bGcG4s1MeAFXUKn4p5RTHOTzPyAMIg7Ixv/natvNZCJFPFrcl/7eiXX1GLY1uCiOnFX9wDCUQ9Ju877XFRFNq1rleqd+Ka8BRvok71p0hlTUt9+51cgvCKrwkn06/ULhKHOxhc+vamsTJ3G5FoeUOMshDmO6R/LdflR [...]
            },
            "metadata_fingerprint": "73sVacabPxk=",
            "name": "hydro-vm-instance-a92a425b",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.209.231.147",
                    "network_tier": "STANDARD"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/global/networks/hydro-vpc-network-fea95f6a",
                "network_ip": "10.128.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/regions/us-central1/subnetworks/hydro-vpc-network-fea95f6a",
                "subnetwork_project": "hydroflow-work"
              }
            ],
            "project": "hydroflow-work",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/zones/us-central1-a/instances/hydro-vm-instance-a92a425b",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "open-external-port-tag-22-04d5774f"
            ],
            "tags_fingerprint": "b98oSeQpJ8Q=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.hydro-vpc-network-fea95f6a",
            "tls_private_key.vm_instance_ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-instance-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20240709",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/zones/us-central1-a/disks/hydro-vm-instance-64df4af7"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/hydroflow-work/zones/us-central1-a/instances/hydro-vm-instance-64df4af7",
            "instance_id": "567300358948030557",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "hydro:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDDowTwcNqXxAPwYH840IZ4Pkk3H2YcvqszE+OkjPf+YUnKk7qB1iUvmlZsZ+uoH9+Xw3rVcvXWLigXdj9hqqJfepPeq60Ucm+LaYm4qOpikkSm/DHjkNu/YFrARfMxTqiizQnm5jEMdieoOW99qrNRdUm08hz3fuM7ZVdPygvA8kk6yX1iPBLqPG4IobZYKFBY/rciULovM9PZQKxmsBGg0LH7CcFZRuJlpwEmjmPnsmVMf0uuPrAvskYtxYPdE/ordi86R3o+bGcG4s1MeAFXUKn4p5RTHOTzPyAMIg7Ixv/natvNZCJFPFrcl/7eiXX1GLY1uCiOnFX9wDCUQ9Ju877XFRFNq1rleqd+Ka8BRvok71p0hlTUt9+51cgvCKrwkn06/ULhKHOxhc+vamsTJ3G5FoeUOMshDmO6R/LdflR [...]
            },
            "metadata_fingerprint": "73sVacabPxk=",
            "name": "hydro-vm-instance-64df4af7",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.208.248.203",
                    "network_tier": "STANDARD"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/global/networks/hydro-vpc-network-fea95f6a",
                "network_ip": "10.128.0.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/regions/us-central1/subnetworks/hydro-vpc-network-fea95f6a",
                "subnetwork_project": "hydroflow-work"
              }
            ],
            "project": "hydroflow-work",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/zones/us-central1-a/instances/hydro-vm-instance-64df4af7",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "open-external-port-tag-22-04d5774f"
            ],
            "tags_fingerprint": "b98oSeQpJ8Q=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.hydro-vpc-network-fea95f6a",
            "tls_private_key.vm_instance_ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-instance-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20240709",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/zones/us-central1-a/disks/hydro-vm-instance-cd317432"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/hydroflow-work/zones/us-central1-a/instances/hydro-vm-instance-cd317432",
            "instance_id": "8454542477000214621",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "hydro:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDDowTwcNqXxAPwYH840IZ4Pkk3H2YcvqszE+OkjPf+YUnKk7qB1iUvmlZsZ+uoH9+Xw3rVcvXWLigXdj9hqqJfepPeq60Ucm+LaYm4qOpikkSm/DHjkNu/YFrARfMxTqiizQnm5jEMdieoOW99qrNRdUm08hz3fuM7ZVdPygvA8kk6yX1iPBLqPG4IobZYKFBY/rciULovM9PZQKxmsBGg0LH7CcFZRuJlpwEmjmPnsmVMf0uuPrAvskYtxYPdE/ordi86R3o+bGcG4s1MeAFXUKn4p5RTHOTzPyAMIg7Ixv/natvNZCJFPFrcl/7eiXX1GLY1uCiOnFX9wDCUQ9Ju877XFRFNq1rleqd+Ka8BRvok71p0hlTUt9+51cgvCKrwkn06/ULhKHOxhc+vamsTJ3G5FoeUOMshDmO6R/LdflR [...]
            },
            "metadata_fingerprint": "73sVacabPxk=",
            "name": "hydro-vm-instance-cd317432",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.209.197.103",
                    "network_tier": "STANDARD"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/global/networks/hydro-vpc-network-fea95f6a",
                "network_ip": "10.128.0.7",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/regions/us-central1/subnetworks/hydro-vpc-network-fea95f6a",
                "subnetwork_project": "hydroflow-work"
              }
            ],
            "project": "hydroflow-work",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/zones/us-central1-a/instances/hydro-vm-instance-cd317432",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "open-external-port-tag-22-04d5774f"
            ],
            "tags_fingerprint": "b98oSeQpJ8Q=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.hydro-vpc-network-fea95f6a",
            "tls_private_key.vm_instance_ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-instance-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20240709",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/zones/us-central1-a/disks/hydro-vm-instance-6e05af07"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/hydroflow-work/zones/us-central1-a/instances/hydro-vm-instance-6e05af07",
            "instance_id": "5701981718920857693",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "hydro:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDDowTwcNqXxAPwYH840IZ4Pkk3H2YcvqszE+OkjPf+YUnKk7qB1iUvmlZsZ+uoH9+Xw3rVcvXWLigXdj9hqqJfepPeq60Ucm+LaYm4qOpikkSm/DHjkNu/YFrARfMxTqiizQnm5jEMdieoOW99qrNRdUm08hz3fuM7ZVdPygvA8kk6yX1iPBLqPG4IobZYKFBY/rciULovM9PZQKxmsBGg0LH7CcFZRuJlpwEmjmPnsmVMf0uuPrAvskYtxYPdE/ordi86R3o+bGcG4s1MeAFXUKn4p5RTHOTzPyAMIg7Ixv/natvNZCJFPFrcl/7eiXX1GLY1uCiOnFX9wDCUQ9Ju877XFRFNq1rleqd+Ka8BRvok71p0hlTUt9+51cgvCKrwkn06/ULhKHOxhc+vamsTJ3G5FoeUOMshDmO6R/LdflR [...]
            },
            "metadata_fingerprint": "73sVacabPxk=",
            "name": "hydro-vm-instance-6e05af07",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.206.76.198",
                    "network_tier": "STANDARD"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/global/networks/hydro-vpc-network-fea95f6a",
                "network_ip": "10.128.0.8",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/regions/us-central1/subnetworks/hydro-vpc-network-fea95f6a",
                "subnetwork_project": "hydroflow-work"
              }
            ],
            "project": "hydroflow-work",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/zones/us-central1-a/instances/hydro-vm-instance-6e05af07",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "open-external-port-tag-22-04d5774f"
            ],
            "tags_fingerprint": "b98oSeQpJ8Q=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.hydro-vpc-network-fea95f6a",
            "tls_private_key.vm_instance_ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-instance-6",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20240709",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/zones/us-central1-a/disks/hydro-vm-instance-c9c53513"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/hydroflow-work/zones/us-central1-a/instances/hydro-vm-instance-c9c53513",
            "instance_id": "4770098146402142301",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "hydro:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDDowTwcNqXxAPwYH840IZ4Pkk3H2YcvqszE+OkjPf+YUnKk7qB1iUvmlZsZ+uoH9+Xw3rVcvXWLigXdj9hqqJfepPeq60Ucm+LaYm4qOpikkSm/DHjkNu/YFrARfMxTqiizQnm5jEMdieoOW99qrNRdUm08hz3fuM7ZVdPygvA8kk6yX1iPBLqPG4IobZYKFBY/rciULovM9PZQKxmsBGg0LH7CcFZRuJlpwEmjmPnsmVMf0uuPrAvskYtxYPdE/ordi86R3o+bGcG4s1MeAFXUKn4p5RTHOTzPyAMIg7Ixv/natvNZCJFPFrcl/7eiXX1GLY1uCiOnFX9wDCUQ9Ju877XFRFNq1rleqd+Ka8BRvok71p0hlTUt9+51cgvCKrwkn06/ULhKHOxhc+vamsTJ3G5FoeUOMshDmO6R/LdflR [...]
            },
            "metadata_fingerprint": "73sVacabPxk=",
            "name": "hydro-vm-instance-c9c53513",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.209.226.133",
                    "network_tier": "STANDARD"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/global/networks/hydro-vpc-network-fea95f6a",
                "network_ip": "10.128.0.9",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/regions/us-central1/subnetworks/hydro-vpc-network-fea95f6a",
                "subnetwork_project": "hydroflow-work"
              }
            ],
            "project": "hydroflow-work",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/zones/us-central1-a/instances/hydro-vm-instance-c9c53513",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "open-external-port-tag-22-04d5774f"
            ],
            "tags_fingerprint": "b98oSeQpJ8Q=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.hydro-vpc-network-fea95f6a",
            "tls_private_key.vm_instance_ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-instance-7",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20240709",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/zones/us-central1-a/disks/hydro-vm-instance-1d448f41"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/hydroflow-work/zones/us-central1-a/instances/hydro-vm-instance-1d448f41",
            "instance_id": "4913128262530271326",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "hydro:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDDowTwcNqXxAPwYH840IZ4Pkk3H2YcvqszE+OkjPf+YUnKk7qB1iUvmlZsZ+uoH9+Xw3rVcvXWLigXdj9hqqJfepPeq60Ucm+LaYm4qOpikkSm/DHjkNu/YFrARfMxTqiizQnm5jEMdieoOW99qrNRdUm08hz3fuM7ZVdPygvA8kk6yX1iPBLqPG4IobZYKFBY/rciULovM9PZQKxmsBGg0LH7CcFZRuJlpwEmjmPnsmVMf0uuPrAvskYtxYPdE/ordi86R3o+bGcG4s1MeAFXUKn4p5RTHOTzPyAMIg7Ixv/natvNZCJFPFrcl/7eiXX1GLY1uCiOnFX9wDCUQ9Ju877XFRFNq1rleqd+Ka8BRvok71p0hlTUt9+51cgvCKrwkn06/ULhKHOxhc+vamsTJ3G5FoeUOMshDmO6R/LdflR [...]
            },
            "metadata_fingerprint": "73sVacabPxk=",
            "name": "hydro-vm-instance-1d448f41",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.208.208.46",
                    "network_tier": "STANDARD"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/global/networks/hydro-vpc-network-fea95f6a",
                "network_ip": "10.128.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/regions/us-central1/subnetworks/hydro-vpc-network-fea95f6a",
                "subnetwork_project": "hydroflow-work"
              }
            ],
            "project": "hydroflow-work",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/zones/us-central1-a/instances/hydro-vm-instance-1d448f41",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "open-external-port-tag-22-04d5774f"
            ],
            "tags_fingerprint": "b98oSeQpJ8Q=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.hydro-vpc-network-fea95f6a",
            "tls_private_key.vm_instance_ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-instance-8",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20240709",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/zones/us-central1-a/disks/hydro-vm-instance-75dde78b"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/hydroflow-work/zones/us-central1-a/instances/hydro-vm-instance-75dde78b",
            "instance_id": "7721575813670013021",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "hydro:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDDowTwcNqXxAPwYH840IZ4Pkk3H2YcvqszE+OkjPf+YUnKk7qB1iUvmlZsZ+uoH9+Xw3rVcvXWLigXdj9hqqJfepPeq60Ucm+LaYm4qOpikkSm/DHjkNu/YFrARfMxTqiizQnm5jEMdieoOW99qrNRdUm08hz3fuM7ZVdPygvA8kk6yX1iPBLqPG4IobZYKFBY/rciULovM9PZQKxmsBGg0LH7CcFZRuJlpwEmjmPnsmVMf0uuPrAvskYtxYPdE/ordi86R3o+bGcG4s1MeAFXUKn4p5RTHOTzPyAMIg7Ixv/natvNZCJFPFrcl/7eiXX1GLY1uCiOnFX9wDCUQ9Ju877XFRFNq1rleqd+Ka8BRvok71p0hlTUt9+51cgvCKrwkn06/ULhKHOxhc+vamsTJ3G5FoeUOMshDmO6R/LdflR [...]
            },
            "metadata_fingerprint": "73sVacabPxk=",
            "name": "hydro-vm-instance-75dde78b",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.208.174.149",
                    "network_tier": "STANDARD"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/global/networks/hydro-vpc-network-fea95f6a",
                "network_ip": "10.128.0.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/regions/us-central1/subnetworks/hydro-vpc-network-fea95f6a",
                "subnetwork_project": "hydroflow-work"
              }
            ],
            "project": "hydroflow-work",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/zones/us-central1-a/instances/hydro-vm-instance-75dde78b",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "open-external-port-tag-22-04d5774f"
            ],
            "tags_fingerprint": "b98oSeQpJ8Q=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.hydro-vpc-network-fea95f6a",
            "tls_private_key.vm_instance_ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "hydro-vpc-network-fea95f6a",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/hydroflow-work/global/networks/hydro-vpc-network-fea95f6a",
            "mtu": 0,
            "name": "hydro-vpc-network-fea95f6a",
            "project": "hydroflow-work",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hydroflow-work/global/networks/hydro-vpc-network-fea95f6a"
          }
        }
      ]
    }
  ]
}